# jna-jni-windows

./: .gitignore  README.md  qr_balance.json
jna/: CMakeLists.txt  NativeBarcodeReader.cxx
jni/: CMakeLists.txt  NativeBarcodeReader.cxx  NativeBarcodeReader.h
src/com/dynamsoft/: Demo.java  JNABarcode.java  JNIBarcode.java
